--- a/public/css/headerDesktop.css
+++ b/public/css/headerDesktop.css
@@ -58,3 +58,35 @@ header {
 .navbar-toggler:active .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 255, 255%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
+
+/* --------- Language button ------- */
+
+#lang {
+    position: absolute;
+    right: 7rem;
+    top: 2.2rem;
+}
+
+.lang-select .active {
+    opacity: 1; 
+}
+
+.lang-select span {
+    opacity: 0.5; 
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+}
+
+.lang-select i.flag {
+    margin-left: 5px;
+    font-size: 18px;
+}
+
+.lang-select .active i.flag {
+    opacity: 1; /* Bandera a full color */
+}
+
+.lang-select span:not(.active) i.flag {
+    opacity: 0.5; /* Bandera más opaca */
+}
