Example images fixed

--- a/public/css/homeMobile.css
+++ b/public/css/homeMobile.css
@@ -1,4 +1,5 @@
 @media (max-width: 768px) {
+
     .parallax-article {
       background-size: 50vw 100%!important;
       /* background-attachment: scroll !important; */
@@ -14,20 +15,22 @@
 
     .parallax-section > .bg-img-projects {
       background-image: url("/img/fotos version mobile 428 X 908/seccion1/1-2 proyectos fondo 214 x1085.png") !important;
-      background-position-y: -5rem !important;
     }
 
     .parallax-section > .bg-img-services{
       background-image: url("/img/fotos version mobile 428 X 908/seccion1/2- servicios 214 x1085.png") !important;
-      background-position-y: -5rem !important;
     }
 
     .parallax-section > .bg-img-us{
-      background-image: url("/img/fotos version mobile 428 X 908/seccion1/3-Sobre nosotros 214 X1223.png") !important;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/3-Sobre nosotros 214 X1283ojo otros celulares.png") !important;
+      background-size: 50vw 135% !important;
+      background-position-y: -8rem !important;
     }
 
     .parallax-section > .bg-img-staff {
-      background-image: url("/img/fotos version mobile 428 X 908/seccion1/4-1nuestro equipo fondo 214 x 1223.png") !important;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/4-1nuestro equipo fondo 214 x 1283ojo otros celulares.png") !important;
+      background-size: 50vw 135% !important;
+      background-position-y: -8rem !important;  
     }
 
     .parallax-section > .bg-img-partners {
@@ -47,7 +50,9 @@
     }
 
     .parallax-section > .bg-img-partners.focus, .parallax-section > .bg-img-staff:hover {
-      background-image: url("/img/fotos version mobile 428 X 908/seccion1/4-2nuestro equipo con ellos 214 x 1223.png") !important;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/4-2nuestro equipo con ellos 214 x 1283ojootros celulares.png") !important;
+      background-size: 50vw 148% !important;
+      background-position-y: -13.6rem !important;
     }
 
     a.grouch.pt-40{
@@ -127,10 +132,12 @@
 
   .parallax-section > .bg-img-antitusa {
       background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/1-Serie-Tips Antitusa  214 x 916.png") !important;
+      background-position-y: -11rem !important;
   }
   
   .parallax-section > .bg-img-restos {
       background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/2-Coming soon cortometraje los restos de la cama coproductores 214x916.png") !important;
+      background-position-y: -12rem !important;
   }
   
   .parallax-section > .bg-img-opening {
@@ -143,9 +150,11 @@
   
   .parallax-section > .bg-img-transmi {
       background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/5-transmilenials piloto coproductores 214x1163.png") !important;
+      background-position-y: 13rem !important;
   }
   .parallax-section > .bg-img-pipe {
       background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/6-concierto 15 años pipe bueno 214x1163.png") !important;
+      background-position-y: 13rem !important;
   }
   
   .parallax-section > .bg-img-tarde  {
@@ -357,3 +366,151 @@
   }
 
   }
+
+
+
+  /*--------- iPhone Pro ---------------- */
+
+  @media only screen and (min-width: 390px) and (min-height: 844px){
+    
+    /* -------------  main section ------------------- */
+    .parallax-section > .bg-img-projects {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/1-2 proyectos fondo 214 x1085.png") !important;
+      background-position-y: -2rem !important;
+    }
+
+    .parallax-section > .bg-img-services{
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/2- servicios 214 x1085.png") !important;
+      background-position-y: -2rem !important;
+    }
+
+    .parallax-section > .bg-img-us{
+      background-position-y: -12rem !important;
+    }
+
+    .parallax-section > .bg-img-staff {
+      background-position-y: -12rem !important;  
+    }
+
+    .parallax-section > .bg-img-partners.focus, .parallax-section > .bg-img-staff:hover {
+      /* background-size: 50vw 170% !important; */
+      background-position-y: -17.5rem !important;
+    }
+
+    /* ------------- projects ------------------------ */
+    .parallax-section > .bg-img-antitusa {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/1-Serie-Tips Antitusa  214 x 916.png") !important;
+      background-position-y: -12.5rem !important;
+  }
+  
+  .parallax-section > .bg-img-restos {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/2-Coming soon cortometraje los restos de la cama coproductores 214x916.png") !important;
+      background-position-y: -14rem !important;
+  }
+
+  .parallax-section > .bg-img-transmi {
+    background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/5-transmilenials piloto coproductores 214x1163.png") !important;
+    background-position-y: 12rem !important;
+  }
+  .parallax-section > .bg-img-pipe {
+    background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/6-concierto 15 años pipe bueno 214x1163.png") !important;
+    background-position-y: 12rem !important;
+  }
+}
+ 
+
+  /*-------- iPhone Pro Max ------------ */
+
+@media only screen and (min-width:428px) and (min-height:926px) {
+
+    /* -------------  main section ------------------- */
+    .parallax-section > .bg-img-us{
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/3-Sobre nosotros 214 X1263ver1ojo.png") !important;
+      background-size: 50vw 125% !important;
+      background-position-y: -9rem !important;
+    }
+
+    .parallax-section > .bg-img-staff {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/4-1nuestro equipo fondo 214 x 1263ojover1.png") !important;
+      background-size: 50vw 125% !important;
+      background-position-y: -9rem !important;  
+    }
+
+    .parallax-section > .bg-img-partners.focus, .parallax-section > .bg-img-staff:hover {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/4-2nuestro equipo con ellos 214 x 1263ver1ojo.png") !important;
+      background-size: 50vw 125% !important;
+      background-position-y: -9rem !important;
+    }
+
+    /* ------------- projects ------------------------ */
+  
+    .parallax-section > .bg-img-restos {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/2-Coming soon cortometraje los restos de la cama coproductores 214x916.png") !important;
+      background-position-y: -16rem !important;
+    }
+
+    .parallax-section > .bg-img-transmi {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/5-transmilenials piloto coproductores 214x1163.png") !important;
+      background-position-y: 13rem !important;
+    }
+    .parallax-section > .bg-img-pipe {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/6-concierto 15 años pipe bueno 214x1163.png") !important;
+      background-position-y: 13rem !important;
+    }
+}
+
+
+/*-------- Equipos pequeños ------------ */
+
+@media only screen and (max-width: 375px) and (max-height: 667px) {
+  
+  /* -------------  main section ------------------- */
+  .parallax-section > .bg-img-projects {
+    background-image: url("/img/fotos version mobile 428 X 908/seccion1/1-2 proyectos fondo 214 x1085.png") !important;
+    background-position-y: -1.5rem !important;
+  }
+
+  .parallax-section > .bg-img-services{
+    background-image: url("/img/fotos version mobile 428 X 908/seccion1/2- servicios 214 x1085.png") !important;
+    background-position-y: -1.5rem !important;
+  }
+
+  .parallax-section > .bg-img-us{
+    background-image: url("/img/fotos version mobile 428 X 908/seccion1/3-Sobre nosotros 214 X1223.png") !important;
+    background-size: 50vw 125% !important;
+    background-position-y: -4rem !important;
+  }
+
+  .parallax-section > .bg-img-staff {
+    background-image: url("/img/fotos version mobile 428 X 908/seccion1/4-1nuestro equipo fondo 214 x 1223.png") !important;
+    background-size: 50vw 125% !important;
+    background-position-y: -4rem !important;  
+  }
+
+  .parallax-section > .bg-img-partners.focus, .parallax-section > .bg-img-staff:hover {
+    background-image: url("/img/fotos version mobile 428 X 908/seccion1/4-2nuestro equipo con ellos 214 x 1223.png") !important;
+    background-size: 50vw 125% !important;
+    background-position-y: -4rem !important;
+  }
+
+    /* ------------- projects ------------------------ */
+  
+    .parallax-section > .bg-img-antitusa {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/1-Serie-Tips Antitusa  214 x 916.png") !important;
+      background-position-y: -9rem !important;
+  }
+  
+  .parallax-section > .bg-img-restos {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/2-Coming soon cortometraje los restos de la cama coproductores 214x916.png") !important;
+      background-position-y: -10rem !important;
+  }
+
+  .parallax-section > .bg-img-transmi {
+    background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/5-transmilenials piloto coproductores 214x1163.png") !important;
+    background-position-y: 10rem !important;
+  }
+  .parallax-section > .bg-img-pipe {
+    background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/6-concierto 15 años pipe bueno 214x1163.png") !important;
+    background-position-y: 10rem !important;
+  }
+}
