--- a/src/views/includes/header.ejs
+++ b/src/views/includes/header.ejs
@@ -4,8 +4,8 @@
             <img src="/img/animacion logo T2F version1.2 pag web.gif" alt="Take2Films Logo">
         </a>
         <div id="lang" class="lang-select" type="button">
-            <span id="es-select" class="text-pwhite kabel-med pt-14 active">ES <i class="flag">🇨🇴</i></span> / 
-            <span id="en-select" class="text-pwhite kabel-med pt-14">EN <i class="flag">🇺🇸</i></span>
+            <span id="es-select" class="text-pwhite kabel-med pt-14 active"><i class="flag pt-12">🇨🇴</i></span>
+            <span id="en-select" class="text-pwhite kabel-med pt-14"><i class="flag pt-12">🇺🇸</i></span>
         </div>
         <button class="navbar-toggler shdw" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
