--- a/public/css/homeMobile.css
+++ b/public/css/homeMobile.css
@@ -24,21 +24,25 @@
     .parallax-section > .bg-img-us{
       background-image: url("/img/fotos version mobile 428 X 908/seccion1/3-Sobre nosotros 214 X1283ojo otros celulares.png") !important;
       background-size: 50vw 135% !important;
-      background-position-y: -8rem !important;
+      background-position-y: -12dvh !important;
     }
 
     .parallax-section > .bg-img-staff {
       background-image: url("/img/fotos version mobile 428 X 908/seccion1/4-1nuestro equipo fondo 214 x 1283ojo otros celulares.png") !important;
       background-size: 50vw 135% !important;
-      background-position-y: -8rem !important;  
+      background-position-y: -12dvh !important;  
     }
 
     .parallax-section > .bg-img-partners {
-      background-image: url("/img/fotos version mobile 428 X 908/seccion1/5-1 aliados SIN silla 214X916.png") !important;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/5-1 aliados SIN silla 214X1715.png") !important;
+      background-size: 50vw 141% !important;
+      /* background-position-y: -14rem !important; */
     }
 
     .parallax-section > .bg-img-contact{
-      background-image: url("/img/fotos version mobile 428 X 908/seccion1/6-contactanos 214X916.png") !important;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/6-contactanos 214X1715.png") !important;
+      background-size: 50vw 141% !important;
+      /* background-position-y: -14rem !important; */
     }
 
     .parallax-section > .bg-img-projects.focus, .parallax-section > .bg-img-projects:hover {
@@ -46,13 +50,15 @@
     }
 
     .parallax-section > .bg-img-partners.focus, .parallax-section > .bg-img-partners:hover {
-      background-image: url("/img/fotos version mobile 428 X 908/seccion1/5-2 aliados con silla 214X916.png") !important;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/5-1 aliados con silla 214X1715.png") !important;
+      background-size: 50vw 141% !important;
+      /* background-position-y: -14rem !important; */
     }
 
     .parallax-section > .bg-img-partners.focus, .parallax-section > .bg-img-staff:hover {
       background-image: url("/img/fotos version mobile 428 X 908/seccion1/4-2nuestro equipo con ellos 214 x 1283ojootros celulares.png") !important;
-      background-size: 50vw 148% !important;
-      background-position-y: -13.6rem !important;
+      background-size: 50vw 135% !important;
+      background-position-y: -18dvh !important;
     }
 
     a.grouch.pt-40{
@@ -132,11 +138,13 @@
 
   .parallax-section > .bg-img-antitusa {
       background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/1-Serie-Tips Antitusa  214 x 916.png") !important;
+      background-size: 50vw 100dvh !important;
       background-position-y: -11rem !important;
   }
   
   .parallax-section > .bg-img-restos {
       background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/2-Coming soon cortometraje los restos de la cama coproductores 214x916.png") !important;
+      background-size: 50vw 100dvh !important;
       background-position-y: -12rem !important;
   }
   
@@ -149,12 +157,14 @@
   }
   
   .parallax-section > .bg-img-transmi {
-      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/5-transmilenials piloto coproductores 214x1163.png") !important;
-      background-position-y: 13rem !important;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/5-transmilenials piloto coproductores 214x1468ojoversion pro2.png") !important;
+      background-size: 50vw 1468px !important;
+      background-position-y: -17rem !important;
   }
   .parallax-section > .bg-img-pipe {
-      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/6-concierto 15 años pipe bueno 214x1163.png") !important;
-      background-position-y: 13rem !important;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/6-concierto 15 años pipe bueno 214x1468ojoversion pro2.png") !important;
+      background-size: 50vw 1468px !important;
+      /* background-position-y: 13rem !important; */
   }
   
   .parallax-section > .bg-img-tarde  {
@@ -371,10 +381,10 @@
 
   /*--------- iPhone Pro ---------------- */
 
-  @media only screen and (min-width: 390px) and (min-height: 844px){
+  /* @media only screen and (min-width: 390px) and (min-height: 844px){
     
     /* -------------  main section ------------------- */
-    .parallax-section > .bg-img-projects {
+    /* .parallax-section > .bg-img-projects {
       background-image: url("/img/fotos version mobile 428 X 908/seccion1/1-2 proyectos fondo 214 x1085.png") !important;
       background-position-y: -2rem !important;
     }
@@ -393,12 +403,12 @@
     }
 
     .parallax-section > .bg-img-partners.focus, .parallax-section > .bg-img-staff:hover {
-      /* background-size: 50vw 170% !important; */
+      
       background-position-y: -17.5rem !important;
-    }
+    } */
 
     /* ------------- projects ------------------------ */
-    .parallax-section > .bg-img-antitusa {
+    /* .parallax-section > .bg-img-antitusa {
       background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/1-Serie-Tips Antitusa  214 x 916.png") !important;
       background-position-y: -12.5rem !important;
   }
@@ -416,15 +426,15 @@
     background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/6-concierto 15 años pipe bueno 214x1163.png") !important;
     background-position-y: 12rem !important;
   }
-}
+} */
  
 
   /*-------- iPhone Pro Max ------------ */
 
-@media only screen and (min-width:428px) and (min-height:926px) {
+/* @media only screen and (min-width:428px) and (min-height:926px) { */
 
     /* -------------  main section ------------------- */
-    .parallax-section > .bg-img-us{
+    /* .parallax-section > .bg-img-us{
       background-image: url("/img/fotos version mobile 428 X 908/seccion1/3-Sobre nosotros 214 X1263ver1ojo.png") !important;
       background-size: 50vw 125% !important;
       background-position-y: -9rem !important;
@@ -440,11 +450,11 @@
       background-image: url("/img/fotos version mobile 428 X 908/seccion1/4-2nuestro equipo con ellos 214 x 1263ver1ojo.png") !important;
       background-size: 50vw 125% !important;
       background-position-y: -9rem !important;
-    }
+    } */
 
     /* ------------- projects ------------------------ */
   
-    .parallax-section > .bg-img-restos {
+    /* .parallax-section > .bg-img-restos {
       background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/2-Coming soon cortometraje los restos de la cama coproductores 214x916.png") !important;
       background-position-y: -16rem !important;
     }
@@ -457,15 +467,15 @@
       background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/6-concierto 15 años pipe bueno 214x1163.png") !important;
       background-position-y: 13rem !important;
     }
-}
+} */
 
 
 /*-------- Equipos pequeños ------------ */
 
-@media only screen and (max-width: 375px) and (max-height: 667px) {
+/* @media only screen and (max-width: 375px) and (max-height: 667px) { */
   
   /* -------------  main section ------------------- */
-  .parallax-section > .bg-img-projects {
+  /* .parallax-section > .bg-img-projects {
     background-image: url("/img/fotos version mobile 428 X 908/seccion1/1-2 proyectos fondo 214 x1085.png") !important;
     background-position-y: -1.5rem !important;
   }
@@ -491,11 +501,11 @@
     background-image: url("/img/fotos version mobile 428 X 908/seccion1/4-2nuestro equipo con ellos 214 x 1223.png") !important;
     background-size: 50vw 125% !important;
     background-position-y: -4rem !important;
-  }
+  } */
 
     /* ------------- projects ------------------------ */
   
-    .parallax-section > .bg-img-antitusa {
+    /* .parallax-section > .bg-img-antitusa {
       background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/1-Serie-Tips Antitusa  214 x 916.png") !important;
       background-position-y: -9rem !important;
   }
@@ -513,4 +523,4 @@
     background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/6-concierto 15 años pipe bueno 214x1163.png") !important;
     background-position-y: 10rem !important;
   }
-}
+} */
