--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -9,23 +9,23 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="/css/styles.css">
-<link rel="stylesheet" href="/css/headerMobile.css" type="text/css">
-<link rel="stylesheet" href="/css/headerTablet.css" type="text/css">
-<link rel="stylesheet" href="/css/headerLaptop.css" type="text/css">
-<link rel="stylesheet" href="/css/headerDesktop.css" type="text/css">
-<link rel="stylesheet" href="/css/footerMobile.css" type="text/css">
-<link rel="stylesheet" href="/css/footerTablet.css" type="text/css">
-<link rel="stylesheet" href="/css/footerLaptop.css" type="text/css">
-<link rel="stylesheet" href="/css/footerDesktop.css" type="text/css">
+<link rel="stylesheet" href="/css/min/styles.min.css" type="text/css">
+<link rel="stylesheet" href="/css/min/headerMobile.min.css" type="text/css">
+<link rel="stylesheet" href="/css/min/headerTablet.min.css" type="text/css">
+<link rel="stylesheet" href="/css/min/headerLaptop.min.css" type="text/css">
+<link rel="stylesheet" href="/css/min/headerDesktop.min.css" type="text/css">
+<link rel="stylesheet" href="/css/min/footerMobile.min.css" type="text/css">
+<link rel="stylesheet" href="/css/min/footerTablet.min.css" type="text/css">
+<link rel="stylesheet" href="/css/min/footerLaptop.min.css" type="text/css">
+<link rel="stylesheet" href="/css/min/footerDesktop.min.css" type="text/css">
 <script defer src="https://player.vimeo.com/api/player.js"></script>
 <% if (styles && styles.length > 0) { %>
     <% styles.forEach(style => { %>
-     <link rel="stylesheet" href="/css/<%= style %>.css" type="text/css">       
+     <link rel="stylesheet" href="/css/min/<%= style %>.min.css" type="text/css">       
     <% }) %>
 <% } %>
 <% if (scripts && scripts.length > 0) { %>
     <% scripts.forEach(script => { %>
-     <script defer src="/js/<%= script %>.js" type="text/javascript"></script>       
+     <script defer src="/js/min/<%= script %>.min.js" type="text/javascript"></script>       
     <% }) %>
 <% } %>
